--- a/wx/src/main/resources/templates/page/user.html
+++ b/wx/src/main/resources/templates/page/user.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xml:th="http://www.thymeleaf.org" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>我的信息</title>
 </head>
 <body>
-
+<p th:text="${user.getNickname()}" />
 </body>
 </html>
