--- a/wx/src/main/resources/templates/page/user.html
+++ b/wx/src/main/resources/templates/page/user.html
@@ -3,8 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>我的信息</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap-grid.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap-reboot.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-<p th:text="${user.getNickname()}" />
+Hello, <span th:text="${user.getNickname()}"></span>!
+<br>
+<br>
+<br>
+<div class="card" style="width: 10rem;">
+    <img class="card-img-top" th:src="${user.getHeadImgUrl()}" alt="Card image cap">
+    <div class="card-body">
+        <h5 class="card-title" th:text="${user.nickname}"></h5>
+        <p class="card-text"> 性别： <span th:text="${user.getSex()}"></span></p>
+        <p class="card-text"> 城市： <span th:text="${user.getCity()}"></span></p>
+        <p class="card-text"> 语言： <span th:text="${user.getLanguage()}"></span></p>
+        <p class="card-text"> 用户特权信息： <span th:text="${user.getPrivilege()}"></span></p>
+    </div>
+</div>
 </body>
 </html>
