--- a/codingce-springboot/springboot-03-web/src/main/resources/templates/commons/commons.html
+++ b/codingce-springboot/springboot-03-web/src/main/resources/templates/commons/commons.html
@@ -11,7 +11,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">[[${session.loginUser}]]</a>
+            <a class="navbar-brand" href="#">欢迎~~[[${session.loginUser}]]</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -32,20 +32,12 @@
     <ul class="nav nav-sidebar">
         <li th:class="${active == 'main.html' ? 'active' : ''}"><a th:href="@{/main.html}">主页 <span class="sr-only">(current)</span></a></li>
         <li th:class="${active == 'list.html' ? 'active' : ''}"><a th:href="@{/emps}">员工列表</a></li>
-        <li th:class="${active == 'main1.html' ? 'active' : ''}"><a href="#">Analytics</a></li>
-        <li th:class="${active == 'main2.html' ? 'active' : ''}"><a href="#">Export</a></li>
+        <li th:class="${active == 'main1.html' ? 'active' : ''}"><a href="#">列表3</a></li>
+        <li th:class="${active == 'main2.html' ? 'active' : ''}"><a href="#">列表3</a></li>
     </ul>
     <ul class="nav nav-sidebar">
-        <li><a href="#">Nav item</a></li>
-        <li><a href="#">Nav item again</a></li>
-        <li><a href="#">One more nav</a></li>
-        <li><a href="#">Another nav item</a></li>
-        <li><a href="#">More navigation</a></li>
-    </ul>
-    <ul class="nav nav-sidebar">
-        <li><a href="#">Nav item again</a></li>
-        <li><a href="#">One more nav</a></li>
-        <li><a href="#">Another nav item</a></li>
+        <li><a href="#">列表3</a></li>
+        <li><a href="#">列表3</a></li>
     </ul>
 </div>
 
