--- a/codingce-springboot/springboot-03-web/src/main/resources/templates/commons/commons.html
+++ b/codingce-springboot/springboot-03-web/src/main/resources/templates/commons/commons.html
@@ -6,7 +6,7 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
+                <span class="sr-only"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -21,7 +21,7 @@
                 <li><a th:href="@{/index.html}">退出</a></li>
             </ul>
             <form class="navbar-form navbar-right">
-                <input type="text" class="form-control" placeholder="Search...">
+                <input type="text" class="form-control" placeholder="搜索">
             </form>
         </div>
     </div>
@@ -30,7 +30,7 @@
 <!--侧边栏-->
 <div class="col-sm-3 col-md-2 sidebar" th:fragment="sidebar">
     <ul class="nav nav-sidebar">
-        <li th:class="${active == 'main.html' ? 'active' : ''}"><a th:href="@{/main.html}">主页 <span class="sr-only">(current)</span></a></li>
+        <li th:class="${active == 'main.html' ? 'active' : ''}"><a th:href="@{/main.html}">主页</a></li>
         <li th:class="${active == 'list.html' ? 'active' : ''}"><a th:href="@{/emps}">员工列表</a></li>
         <li th:class="${active == 'main1.html' ? 'active' : ''}"><a href="#">列表3</a></li>
         <li th:class="${active == 'main2.html' ? 'active' : ''}"><a href="#">列表3</a></li>
