--- a/codingce-springboot/springboot-03-web/src/main/resources/templates/emp/list.html
+++ b/codingce-springboot/springboot-03-web/src/main/resources/templates/emp/list.html
@@ -1,35 +1,23 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="icon" th:href="@{https://v3.bootcss.com/favicon.ico}">
-    <title>Dashboard Template for Bootstrap</title>
+    <title>员工列表</title>
     <link th:href="@{/css/dashboard.css}" rel="stylesheet">
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
     <link th:href="@{/css/dashboard.css}" rel="stylesheet">
   </head>
-
   <body>
-
   <div th:insert="~{commons/commons::topbar}"></div>
     <div class="container-fluid">
       <div class="row">
 
         <div th:insert="~{commons/commons::sidebar(active = 'list.html')}"></div>
-
-
-
-
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">Dashboard</h1>
-
+          <h1 class="page-header">控制台</h1>
           <div class="row placeholders">
-<!--            <div class="col-xs-6 col-sm-3 placeholder">-->
-<!--              <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">-->
-<!--              <h4>Label</h4>-->
-<!--              <span class="text-muted">Something else</span>-->
-<!--            </div>-->
-
           </div>
-
           <h2 class="sub-header"><a class="btn btn-sm btn-success" th:href="@{/emp}">新增员工</a></h2>
           <div class="table-responsive">
             <table class="table table-striped">
@@ -53,8 +41,8 @@
                 <td th:text="${emp.getDepartment().getDepartmentName()}"></td>
                 <td th:text="${#dates.format(emp.getBirth(), 'yyyy-MM-dd HH-mm:ss')}"></td>
                 <td>
-                  <button class="btn btn-sm btn-primary">编辑</button>
-                  <button class="btn btn-sm btn-danger">删除</button>
+                  <a class="btn btn-sm btn-primary" th:href="@{/emp/} + ${emp.getId()}">编辑</a>
+                  <a class="btn btn-sm btn-danger">删除</a>
                 </td>
               </tr>
               </tbody>
