--- a/codingce-springboot/springboot-03-web/src/main/resources/templates/commons/commons.html
+++ b/codingce-springboot/springboot-03-web/src/main/resources/templates/commons/commons.html
@@ -18,7 +18,7 @@
                 <li><a th:href="@{/main.html}">主页</a></li>
                 <li><a href="#">设置</a></li>
                 <li><a href="#">项目</a></li>
-                <li><a th:href="@{/index.html}">退出</a></li>
+                <li><a th:href="@{/user/logout}">退出</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <input type="text" class="form-control" placeholder="搜索">
