--- a/codingce-springboot/springboot-07-springsecurity/src/main/resources/templates/index.html
+++ b/codingce-springboot/springboot-07-springsecurity/src/main/resources/templates/index.html
@@ -13,51 +13,13 @@
 
 <body>
 <!--导航栏-->
-<!--<div th:insert="~{commons/commons::topbar}"></div>-->、
-<nav class="navbar navbar-inverse navbar-fixed-top" th:fragment="topbar">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">欢迎~~<span sec:authentication="name"></span></a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a th:href="@{/main.html}">主页</a></li>
-                <li><a th:href="@{/logout}">注销</a></li>
-            </ul>
-            <form class="navbar-form navbar-right">
-                <input type="text" class="form-control" placeholder="搜索">
-            </form>
-        </div>
-    </div>
-</nav>
-
+<div th:insert="~{commons/commons::topbar}"></div>
 <div class="container-fluid">
     <div class="row">
-        <!--        <div th:insert="~{commons/commons::sidebar(active = 'main.html')}"></div>-->
         <!--侧边栏-->
-        <div class="col-sm-3 col-md-2 sidebar" th:fragment="sidebar">
-            <ul class="nav nav-sidebar">
-                <li th:class="${active == 'main.html' ? 'active' : ''}"><a th:href="@{/main.html}">主页</a></li>
-                <li th:class="${active == 'list.html' ? 'active' : ''}"><a th:href="@{/emps}">列表</a></li>
-                <li th:class="${active == 'main1.html' ? 'active' : ''}"><a href="#">列表3</a></li>
-                <li th:class="${active == 'main2.html' ? 'active' : ''}"><a href="#">列表3</a></li>
-            </ul>
-            <ul class="nav nav-sidebar">
-                <li><a href="#">列表3</a></li>
-                <li><a href="#">列表3</a></li>
-            </ul>
-        </div>
-
-
+        <div th:insert="~{commons/commons::sidebar(active = 'main.html')}"></div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1 class="page-header">Dashboard</h1>
+            <h1 class="page-header">Dashboard<span sec:authentication="name"></span></h1>
 
             <div class="row placeholders">
                 <!--            <div class="col-xs-6 col-sm-3 placeholder">-->
