F 设置权限(level页面是否显示)

--- a/codingce-springboot/springboot-07-springsecurity/src/main/resources/templates/index.html
+++ b/codingce-springboot/springboot-07-springsecurity/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
             </div>
 
             <h2 class="sub-header">Section title</h2>
-            <div class="column" sec:au>
+            <div class="column" sec:authorize="hasRole('vip1')">
                 <div class="ui raised segment">
                     <div class="ui">
                         <div class="content">
@@ -45,7 +45,7 @@
                 </div>
             </div>
 
-            <div class="column">
+            <div class="column" sec:authorize="hasRole('vip2')">
                 <div class="ui raised segment">
                     <div class="ui">
                         <div class="content">
@@ -59,7 +59,7 @@
                 </div>
             </div>
 
-            <div class="column">
+            <div class="column" sec:authorize="hasRole('vip3')">
                 <div class="ui raised segment">
                     <div class="ui">
                         <div class="content">
