--- a/codingce-springboot/springboot-07-springsecurity/src/main/resources/templates/commons/commons.html
+++ b/codingce-springboot/springboot-07-springsecurity/src/main/resources/templates/commons/commons.html
@@ -13,7 +13,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">欢迎~~<span sec:authentication="name"></span></a>
+            <a class="navbar-brand" href="#">
+                欢迎~~<span sec:authentication="name"></span>
+<!--                权限<span sec:authentication="principal.getAuthorities()"></span>-->
+            </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
