--- a/codingce-springboot/springboot-09-shiro/src/main/resources/templates/index.html
+++ b/codingce-springboot/springboot-09-shiro/src/main/resources/templates/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:shiro="http://www.thymeleaf.org/thymeleaf-extras-shiro">
 <head>
     <meta charset="UTF-8">
     <title>首页</title>
 </head>
 <body>
 <h1>首页</h1>
-<p th:text="${msg}"></p>
+<div th:if="${session.loginUser == null}">
+    <a th:href="@{/toLogin}">登录</a>
+</div>
 
-<a th:href="@{/user/add}">add</a>
-<a th:href="@{/user/update}">update</a>
+<p th:text="${msg}"></p>
+<div shiro:hasPermission="user:add">
+    <a th:href="@{/user/add}">add</a>
+</div>
+<div shiro:hasPermission="user:update">
+    <a th:href="@{/user/update}">update</a>
+</div>
 </body>
 </html>
