A 搜索前后端分离, 前端样式替换; 高亮显示

--- a/codingce-es/codingce-es-jd/src/main/resources/templates/index.html
+++ b/codingce-es/codingce-es-jd/src/main/resources/templates/index.html
@@ -25,7 +25,8 @@
             <img :src="result.img" class="product-image"/>
 
             <div class="product-name">
-                {{result.title}}
+                <a v-html="result.title"></a>
+<!--                {{result.title}}-->
             </div>
 
 <!--            <div class="product-desc">-->
