--- a/codingce-es/codingce-es-jd/src/main/resources/templates/myindex.html
+++ b/codingce-es/codingce-es-jd/src/main/resources/templates/myindex.html
@@ -77,8 +77,8 @@
         </div>
     </main>
 </div>
-<script type="text/javascript" th:src="@{/js/axios.min.js}"></script>
-<script type="text/javascript" th:src="@{/js/vue.min.js}"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/xzMhehe/StaticFile_CDN@main/static/axios.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/xzMhehe/StaticFile_CDN@main/static/vue.min.js"></script>
 <script>
     new Vue({
         el: '#app',
