--- a/codingce-rabbitmq/rabbitmq-02-springboot/src/main/resources/templates/index.html
+++ b/codingce-rabbitmq/rabbitmq-02-springboot/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>全栈自学社区消息中间件</title>
+    <title>后端码匠消息中间件</title>
 
     <link rel="stylesheet" href="https://v4.bootcss.com/docs/4.6/dist/css/bootstrap.min.css">
     <link rel="apple-touch-icon" href="https://v4.bootcss.com/docs/4.6/assets/img/favicons/apple-touch-icon.png"
